externalpackages/petsc/src/arch-darwin-c-opt/externalpackages/zlib-1.2.11/configure.log
--------------------
./configure
Sun Apr  9 08:44:44 EDT 2023
=== ztest46359.c ===
extern int getchar();
int hello() {return getchar();}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c ztest46359.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest46359.c ===
int foo() { return 0; }
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c

Checking for shared library support...
=== ztest46359.c ===
extern int getchar();
int hello() {return getchar();}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -w -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -fPIC ztest46359.c
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.11 -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -fPIC -o ztest46359.dylib ztest46359.o
Building shared library libz.1.2.11.dylib with /Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc.

=== ztest46359.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c
Checking for size_t... Yes.


=== ztest46359.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -D_LARGEFILE64_SOURCE=1 ztest46359.c
ztest46359.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types/_off_t.h:31:33: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest46359.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -o ztest46359 ztest46359.c
Checking for fseeko... Yes.

=== ztest46359.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -o ztest46359 ztest46359.c
Checking for strerror... Yes.

=== ztest46359.c ===
#include <unistd.h>
int main() { return 0; }
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c
Checking for unistd.h... Yes.

=== ztest46359.c ===
#include <stdarg.h>
int main() { return 0; }
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c
Checking for stdarg.h... Yes.

=== ztest46359.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest46359.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -o ztest46359 ztest46359.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest46359.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c
Checking for return value of vsnprintf()... Yes.

=== ztest46359.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
/Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -c -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration ztest46359.c
Checking for attribute(visibility) support... Yes.

ALL = static shared
AR = /usr/bin/libtool
ARFLAGS = -o
CC = /Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc
CFLAGS = -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -DHAVE_HIDDEN
CPP = /Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = /Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install/bin/mpicc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.11
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -fstack-protector -fno-stack-check -Qunused-arguments -g -O3 -fno-common -Wno-implicit-function-declaration -fPIC -DHAVE_HIDDEN
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.11.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.11
Z_U4 =
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /Users/kasra/MyDocuments-Local/trunk-jpl/externalpackages/petsc/install
sharedlibdir = ${libdir}
uname = Darwin
--------------------


